Update BE08Tree.java